# generic_scene_graph

./: .travis.yml  CMakeLists.txt  License.md  ReadMe.md  azure-pipelines.yml  build.py  build.sh  conanfile.py  package-lock.json  package.json  watch_filter.js
cmake/: export.cmake  generic_scene_graph-config-version.cmake.in  generic_scene_graph-config.cmake.in  gsg-config-version.cmake.in  gsg-config.cmake.in
config/: Config.h.in  Version.h.in
notes/: ideas.txt
scripts/: apple.sh  before.sh  before_apple.sh  before_ubuntu.sh  before_windows.bat  before_windows.sh  ci.js  ci.sh  ci_with_docker.sh  ubuntu.sh
source/: CMakeLists.txt
source/GSG/: Export.h  Forward.h
source/GSG/Base/: CMakeLists.txt  Export.h  Forward.h  Object.cpp  Object.h
source/GSG/Base/Containers/: Array.h  Sequence.h  TypedArrays.cpp  TypedArrays.h
source/GSG/Base/Objects/: Object.cpp  Object.h
source/GSG/Nodes/: Node.cpp  Node.h
source/GSG/Nodes/Groups/: Group.cpp  Group.h
source/GSG/Render/OSMesa/: CMakeLists.txt  Renderer.cpp  Renderer.h
source/GSG/Renderers/: CMakeLists.txt
source/GSG/Renderers/OSMesa/: CMakeLists.txt  Export.h  Renderer.cpp  Renderer.h  Visitor.cpp  Visitor.h
source/GSG/Scene/: CMakeLists.txt  Export.h  Forward.h
source/GSG/Scene/Buffers/: Buffer.cpp  Buffer.h
source/GSG/Scene/Constants/: Mode.h
source/GSG/Scene/Nodes/: Node.cpp  Node.h
source/GSG/Scene/Nodes/Groups/: Group.cpp  Group.h  Projection.cpp  Projection.h  Transform.cpp  Transform.h
source/GSG/Scene/Nodes/Shapes/: Geometry.cpp  Geometry.h  Shape.cpp  Shape.h
source/GSG/Scene/Primitives/: DrawArrays.cpp  DrawArrays.h  DrawElements.cpp  DrawElements.h  Primitive.cpp  Primitive.h  PrimitiveSet.cpp  PrimitiveSet.h
source/GSG/Scene/State/: Container.cpp  Container.h
source/GSG/Scene/Visitors/: Visitor.cpp  Visitor.h
source/GSG/Scene/Visitors/Callbacks/: Const.cpp  Const.h  Modify.cpp  Modify.h
source/GSG/Scene/Visitors/Intersection/: Intersect.cpp  Intersect.h
source/GSG/Tools/: CMakeLists.txt  Export.h
source/GSG/Tools/Tree/: Layer.cpp  Layer.h  Root.cpp  Root.h
source/GSG/Tools/Visitors/Callbacks/: Const.cpp  Const.h  Modify.cpp  Modify.h
source/GSG/Tools/Visitors/Cull/: Visitor.cpp  Visitor.h
source/GSG/Tools/Visitors/Intersection/: Intersect.cpp  Intersect.h
source/GSG/Tools/Visitors/Update/: Visitor.cpp  Visitor.h
source/GSG/Visitors/: Visitor.cpp  Visitor.h
tests/: CMakeLists.txt
tests/GSG/: Main.cpp  Version.cpp
tests/GSG/Base/: CMakeLists.txt
tests/GSG/Base/Containers/: Array.cpp  Sequence.cpp  TypedArrays.cpp
tests/GSG/Render/OSMesa/: CMakeLists.txt  Renderer.cpp
tests/GSG/Renderers/: CMakeLists.txt
tests/GSG/Renderers/OSMesa/: CMakeLists.txt  Renderer.cpp  Visitor.cpp
tests/GSG/Scene/: CMakeLists.txt
tests/GSG/Scene/Buffers/: Buffer.cpp
tests/GSG/Scene/Nodes/Groups/: Group.cpp  Transform.cpp
tests/GSG/Scene/Nodes/Shapes/: Geometry.cpp
tests/GSG/Scene/Primitives/: DrawElements.cpp
tests/GSG/Scene/State/: Container.cpp
tests/GSG/Scene/Visitors/: Callbacks.cpp
tests/GSG/Tools/: CMakeLists.txt
tests/GSG/Tools/Visitors/: Callbacks.cpp  Cull.cpp
