
################################################################################
#
#  Copyright (c) 2021, Perry L Miller IV
#  All rights reserved.
#  MIT License: https://opensource.org/licenses/mit-license.html
#
################################################################################

################################################################################
#
#  CMake file for the test programs.
#
################################################################################

# Process the CMakeLists.txt files found in these directories.
add_subdirectory ( OSMesa )
